fix: Fix magins and spacing for the accordion element Card: https://app.clickup.com/t/86by3fqeb

--- a/src/styles/elements/_details.css
+++ b/src/styles/elements/_details.css
@@ -1,5 +1,7 @@
 @layer components {
     .details {
+        --toujou-details-content-padding: 0 var(--spacing-s) var(--spacing-l);
+
         --details-display: block;
         --details-width: var(--content-width-with-padding);
         --details-max-width: var(--content-max-width);
